# bip-keychain-core

./: .envrc  .gitignore  CLAUDE.md  CLI-USAGE.md  Cargo.toml  GIT-SIGNING-GUIDE.md  LICENSE  NICKEL-WORKFLOW.md  PROJECT-STATUS.md  README.md  REVIEW-CHECKLIST.md  ROADMAP.md  SSH-KEYS-GUIDE.md  TODO.md  export-nickel-examples.sh  flake.nix  justfile  test-cli.sh  test-ssh-keys.sh  test-workflow.sh
.claude/: development-workflow.md  settings.local.json
docs/: README.md
examples/: EXAMPLES.md  airgapped-workflow.sh  animated-qr.sh  api-service-key.json  backup-and-recovery.sh  batch-derive-keys.sh  blockchain-identity.json  cicd-integration-example.yml  complete-keychain.ncl  comprehensive-demo.sh  derive_key.rs  did-identity.json  email-signing.json  github-repo-key.json  github-repo.json  gordian-envelope.json  infrastructure-keys.ncl  iot-device-key.json  iot-fleet-device.json  ipfs-content-signing.json  key-rotation-workflow.sh  organization-signing.json  person-identity.json  roundtrip-test.sh  saas-customer-acme.json  saas-customer-techstart.json  server-dev.json  server-prod.json  server-staging.json  sha256-example.json  software-app-signing.json  ssh-provision-servers.sh  sskr-backup.sh  terraform-integration.sh  test-entity.json  urn-namespace.json  verifiable-credential.json  x509-distinguished-name.json
spec/: design.md  requirements.md  tasks.md
src/: bip32_wrapper.rs  derivation.rs  entity.rs  error.rs  hash.rs  lib.rs  output.rs  sskr.rs
tests/: bip32_tests.rs  entity_tests.rs  hash_tests.rs  integration_test.rs  property_tests.rs
(+6 files in other folders)
