[package]
name = "bip-keychain"
version = "0.1.0"
edition = "2021"
authors = ["DAOgora Contributors"]
license = "BSD-2-Clause"
description = "Multi-schema semantic hierarchical key derivation implementing BIP-Keychain"
repository = "https://github.com/daogora-xyz/bip-keychain-core"
keywords = ["bip32", "bip85", "keychain", "cryptography", "hierarchical-deterministic"]
categories = ["cryptography"]

[dependencies]
# BIP standards
bip32 = "0.5"
bip39 = "2.0"

# Crypto - Multi-hash support
hmac = "0.12"
sha2 = "0.10"
alkali = "0.4"  # BLAKE2b (Blockchain Commons compatibility)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"  # Hex encoding for CLI and tests

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing
proptest = "1.0"  # Property-based testing

[[bin]]
name = "bip-keychain"
path = "src/bin/bip-keychain.rs"

[lib]
name = "bip_keychain"
path = "src/lib.rs"
